--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
+    "format": "prettier . --write",
     "test": "vitest run",
     "test:watch": "vitest watch"
   },
@@ -31,15 +32,17 @@
     "@nuxt/kit": "^3.6.5"
   },
   "devDependencies": {
-    "@types/node": "^18.17.1",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxt/module-builder": "^0.4.0",
     "@nuxt/schema": "^3.6.5",
     "@nuxt/test-utils": "^3.6.5",
+    "@types/node": "^18.17.4",
     "changelogen": "^0.5.4",
     "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
     "nuxt": "^3.6.5",
+    "prettier": "3.0.1",
     "vitest": "^0.33.0"
   }
 }
