--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.6.5"
+    "@nuxt/kit": "^3.6.5",
+    "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -37,6 +38,7 @@
     "@nuxt/module-builder": "^0.4.0",
     "@nuxt/schema": "^3.6.5",
     "@nuxt/test-utils": "^3.6.5",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.17.4",
     "changelogen": "^0.5.4",
     "eslint": "^8.46.0",
